[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/normal_large.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/normal_medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/scripts/GenerationSettingsDialog.gd" type="Script" id=3]

[node name="GenerationSettings" type="AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 179.0
margin_top = 162.0
margin_right = -179.0
margin_bottom = -162.0
window_title = "Paramètres de génération d'objets"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 650.0
margin_bottom = 232.0
custom_constants/separation = 32
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 650.0
margin_bottom = 72.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_top = 2.0
margin_right = 196.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "Nom de L'objet"

[node name="PrefixeEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 362.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Objet"
placeholder_text = "Préfixe"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 378.0
margin_right = 448.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "[ID]"
align = 1
editable = false

[node name="SuffixeEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 614.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Suffixe"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 650.0
margin_bottom = 132.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 130.0
margin_right = 188.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Poids"

[node name="MinWeightSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 204.0
margin_right = 354.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
value = 1.0
prefix = "min : "

[node name="MaxWeightSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 370.0
margin_right = 520.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
value = 100.0
allow_greater = true
prefix = "max : "

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 650.0
margin_bottom = 192.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 135.0
margin_right = 182.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Gain"

[node name="MinGainSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 198.0
margin_right = 348.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
value = 1.0
prefix = "min : "

[node name="MaxGainSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 364.0
margin_right = 514.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
value = 100.0
allow_greater = true
prefix = "max : "
